{
    "name": "TouchInput",
    "maps": [
        {
            "name": "Touch",
            "id": "e910ef71-9161-47f1-a5c7-7c3a78343a70",
            "actions": [
                {
                    "name": "OneTapIgnoredDoubleTap",
                    "type": "PassThrough",
                    "id": "3a588ada-f65c-4753-8862-535be13dcacf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "DoubleTap",
                    "type": "PassThrough",
                    "id": "3dcf88f5-9952-4c7c-891a-079ddba81575",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap,Tap"
                },
                {
                    "name": "DragTouch",
                    "type": "PassThrough",
                    "id": "ca287ea2-aa4c-4da7-8cf2-78f40acf23e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimaryTouchPosition",
                    "type": "Value",
                    "id": "8481539c-817c-48bc-a335-230349b9adba",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryTouchPosition",
                    "type": "Value",
                    "id": "2d01da8c-d532-466c-b06e-01dddcd6d29d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryTouchContact",
                    "type": "Button",
                    "id": "3b87da02-e4c4-42b6-a3a0-e1f0182b4068",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "ZoomUpButton",
                    "type": "Button",
                    "id": "6da00744-0e3d-4301-aa33-49b4e4ee77eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "ZoomDownButton",
                    "type": "Button",
                    "id": "0399359c-b2ec-49e6-98c1-d6853a3cc6ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "WheelZoom",
                    "type": "PassThrough",
                    "id": "3ab92271-89b7-4a9f-9e4b-f7e0ee769916",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MiddleClick",
                    "type": "PassThrough",
                    "id": "42fc77b1-15a2-452b-acd6-6ed7ca5292bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b522b66c-8f75-4cf5-98d5-76e13084a38e",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "DoubleTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cea0ba0f-31d8-441c-a38e-f783c40a816e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "DoubleTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34d509c7-546d-4302-9991-4c3c0e2a958e",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "PrimaryTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1392970f-acd6-4005-b78b-6fe43531928b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "PrimaryTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10373b95-7035-4229-b887-9701a33dfdd1",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "SecondaryTouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7abfee60-8708-401d-8c7e-a39c68ad1c28",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "SecondaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc187476-69c3-4755-81cb-d36c75b44f7e",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "KeyBoard&Mouse",
                    "action": "WheelZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "334071e1-30d6-44eb-b2c1-b62bc970c36e",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "309de6b6-d1d9-4104-8cb7-0a26fdbf0b7e",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "OneTapIgnoredDoubleTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d8354df-d3f7-4969-abaa-f1b441e8caff",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "OneTapIgnoredDoubleTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3c9dc4e-c626-41c3-971a-c619e64e80d5",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "Hold,Tap",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "ZoomUpButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4834fb9d-0d62-488f-b21a-34c018ab8170",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "Hold,Tap",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "ZoomDownButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97a3ef10-2f16-4821-979c-ddd6eaa24274",
                    "path": "<Touchscreen>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "DragTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa3f16cb-c41a-4c84-b75b-18937140b110",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "2a8dd2b0-8af4-4fbb-a33f-ec9666ccfadb",
            "actions": [
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "3f8383c1-f85c-4f4d-b404-3d6ca864392b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Click",
                    "type": "PassThrough",
                    "id": "8b24ab76-f3f0-4fe3-8862-cb8e92c78752",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ScrollWheel",
                    "type": "PassThrough",
                    "id": "b7121c95-950f-4d48-a8d4-0cae1f566751",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MiddleClick",
                    "type": "Button",
                    "id": "9664d5ca-3b62-4f39-88db-56d6bb5b9ec3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "fea4d8cd-54ff-48a4-b0b9-168a687066fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "890bc99b-4985-4280-8b1d-77b66e811c33",
                    "path": "<Touchscreen>/touch*/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f13b1acd-9c5e-456d-bb4d-2ed94be52cb3",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa38f86e-40b0-4bfc-b117-f6ec373df93a",
                    "path": "<Touchscreen>/touch*/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e50f4f4d-0eee-4442-bf99-97c29062968d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccfeba63-3321-43aa-a504-0d526da3e0f9",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6718e011-fa17-43b1-9fc5-3cbc1671ad3e",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39604b1b-2f68-40ba-bc87-ce05adf9af03",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoard&Mouse",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "KeyBoard&Mouse",
            "bindingGroup": "KeyBoard&Mouse",
            "devices": []
        }
    ]
}